--- a/Nasa-Meteorite/src/App.css
+++ b/Nasa-Meteorite/src/App.css
@@ -4,3 +4,19 @@
   box-sizing: border-box;
   font-family: Inter, Helvetica, Arial, sans-serif;
 }
+
+header {
+  background-color: #093a8d;
+  padding: 1rem;
+}
+
+nav {
+  padding: 1rem;
+  display: flex;
+  justify-content: end;
+}
+
+main {
+  margin: 0 auto;
+  max-width: 1024px;
+}
